--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "hw4_2",
   "version": "0.1.0",
+  "homepage": "https://AlexGnutov.github.io/ra_hw4_2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.3",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
